<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.azure.provisioning</groupId>
        <artifactId>azure-provisioning</artifactId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <artifactId>azure-provisioning-storage</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <javaModulesSurefireArgLine>
            --add-opens com.azure.resourcemanager.storage/com.azure.resourcemanager.storage=ALL-UNNAMED
            --add-opens com.azure.core/com.azure.core.http=com.azure.resourcemanager.resources
            --add-opens com.azure.core/com.azure.core.http.policy=com.azure.resourcemanager.resources

            --add-opens com.azure.resourcemanager.authorization/com.azure.resourcemanager.authorization=ALL-UNNAMED
            --add-opens com.azure.resourcemanager.msi/com.azure.resourcemanager.msi=ALL-UNNAMED
            --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
        </javaModulesSurefireArgLine>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.azure.provisioning</groupId>
            <artifactId>azure-provisioning-core</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.azure</groupId>
            <artifactId>azure-core-test</artifactId>
            <version>1.27.0-beta.4</version> <!-- {x-version-update;com.azure:azure-core-test;dependency} -->
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.azure</groupId>
            <artifactId>azure-core</artifactId>
            <version>1.54.1</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
        </dependency>
        <dependency>
            <groupId>com.azure</groupId>
            <artifactId>azure-core-management</artifactId>
            <version>1.15.6</version> <!-- {x-version-update;com.azure:azure-core-management;dependency} -->
        </dependency>
        <dependency>
            <groupId>com.azure</groupId>
            <artifactId>azure-identity</artifactId>
            <version>1.15.0</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
